--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
   />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link href="https://fonts.googleapis.com/css?family=Montserrat|Patua+One&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="keywords" content="covid, mrna, vaccine, vacci, vaccinformation">
