--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Merriweather+Sans&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans&display=swap"
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
