More work on the front page, it is now possible to see the benefits of mRNA vaccines more clearly.

--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,6 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0"
     />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
       href="https://fonts.googleapis.com/css2?family=Merriweather&family=Merriweather+Sans&display=swap"
@@ -23,11 +21,14 @@
       name="description"
       content="Information about the mRNA-vaccine, its usage and effects on the human body."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Vacci - mRNA Vaccine Information</title>
+    <title>mRNA Vaccine Information</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript!</noscript>
