--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       name="description"
       content="Information about the mRNA-vaccine, its usage and effects on the human body."
     />
-    <link rel="shortcut icon" href="/favicon.ico" />
+    <link rel="shortcut icon" sizes="48x48" href="/favicon-48x48.png" />
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
